# AmbientVPN-Web

./: .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  init_env.py  manage.py  mypy.ini  mypy.py  pyproject.toml
apps/core/: urls.py  views.py
apps/core/static/core/css/: index.css  policy.css
apps/core/templates/core/: index.html  policy.html
nginx/: nginx.conf
static/css/: 404.css
templates/: 404.html  base.html
web/: settings.py  urls.py
